[package]
name = "cargo-project-finder"
version = "0.1.0"
edition = "2021"
authors = ["Ahmet Özcan <ahmetozcan21@yahoo.com>"]
description = "A CLI tool to find Cargo projects in directories recursively"
license = "MIT"
repository = "https://github.com/ahmetoozcan/cargo-project-finder"
keywords = ["cargo", "cli", "rust", "project", "finder"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Storage_FileSystem"] }
